--- a/src/pages/Products.css
+++ b/src/pages/Products.css
@@ -146,7 +146,7 @@
 }
 
 .product-content p {
-  color: #999;
+  color: #444;
   line-height: 1.6;
   font-size: 1.05rem;
 }
